continuidade aplicacao
